Fixed showing all tasks instead of only the tasks of the selected project. Set home page to overflow y auto since I will add more items in the future here. Fixed the counter to use filteredTasks instead of all tasks

--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -5,6 +5,9 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    max-height: 100%;
+    overflow: hidden;
+    overflow-y: auto;
     gap: 10px;
     padding: 10px;
 }
@@ -29,10 +32,9 @@
 }
 
 /* pinned tasks */
-.pinned{
-    max-height: calc(100% - 170px);
-    min-height: 200px;
-    flex-grow: 1;
+.tasks{
+    height: 200px;
+    max-height: 200px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -42,10 +44,9 @@
     grid-row: 2 / 3;
     flex-grow: 1;
 }
-.pinned-tasks-container{
+.tasks-container{
     height: 100%;
     width: 100%;
-    max-height: 100%;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -57,12 +58,17 @@
     width: 100%;
     height: 40px;
     min-height: 40px;
+    max-height: 40px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #0F0F0F;
     border-radius: 5px;
     padding: 0 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
 }
 .home-task .task-title{
     width: auto;
@@ -88,6 +94,7 @@
     border-radius: 5px;
     gap: 15px;
     display: flex;
+    margin-bottom: 10px;
     flex-direction: column;
     transition: all 0.1s;
 }
@@ -154,7 +161,8 @@
 
     .home{
         width: 100vw;
-        height: calc(50vh - 30px);
+        height: calc(50vh - 80px);
+        max-height: calc(50vh - 80px);
     }
 
 }
